JOSS Draft1, additions

--- a/JOSS_Paper/paper_spog.bib
+++ b/JOSS_Paper/paper_spog.bib
@@ -331,3 +331,112 @@ archivePrefix = {arXiv},
   year =      {2002--},
   url = "http://www.pytables.org/"
 }
+
+
+@ARTICLE{Serenelli2021,
+       author = {{Serenelli}, Aldo and {Weiss}, Achim and {Aerts}, Conny and {Angelou}, George C. and {Baroch}, David and {Bastian}, Nate and {Beck}, Paul G. and {Bergemann}, Maria and {Bestenlehner}, Joachim M. and {Czekala}, Ian and {Elias-Rosa}, Nancy and {Escorza}, Ana and {Van Eylen}, Vincent and {Feuillet}, Diane K. and {Gandolfi}, Davide and {Gieles}, Mark and {Girardi}, L{\'e}o and {Lebreton}, Yveline and {Lodieu}, Nicolas and {Martig}, Marie and {Miller Bertolami}, Marcelo M. and {Mombarg}, Joey S.~G. and {Morales}, Juan Carlos and {Moya}, Andr{\'e}s and {Nsamba}, Benard and {Pavlovski}, Kre{\v{s}}imir and {Pedersen}, May G. and {Ribas}, Ignasi and {Schneider}, Fabian R.~N. and {Silva Aguirre}, Victor and {Stassun}, Keivan G. and {Tolstoy}, Eline and {Tremblay}, Pier-Emmanuel and {Zwintz}, Konstanze},
+        title = "{Weighing stars from birth to death: mass determination methods across the HRD}",
+      journal = {\aapr},
+     keywords = {Stars: fundamental parameters, Stars: evolution, Stars: binaries: eclipsing, Stars: planetary systems, Galaxy: stellar content, Methods: numerical, Asteroseismology, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2021,
+        month = dec,
+       volume = {29},
+       number = {1},
+          eid = {4},
+        pages = {4},
+          doi = {10.1007/s00159-021-00132-9},
+archivePrefix = {arXiv},
+       eprint = {2006.10868},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021A&ARv..29....4S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Salpeter1955,
+       author = {{Salpeter}, Edwin E.},
+        title = "{The Luminosity Function and Stellar Evolution.}",
+      journal = {\apj},
+         year = 1955,
+        month = jan,
+       volume = {121},
+        pages = {161},
+          doi = {10.1086/145971},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1955ApJ...121..161S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Heeren2021
+       author = {{Heeren}, Paul and {Reffert}, Sabine and {Trifonov}, Trifon and {Wong}, Ka Ho and {Lee}, Man Hoi and {Lillo-Box}, Jorge and {Quirrenbach}, Andreas and {Arentoft}, Torben and {Albrecht}, Simon and {Grundahl}, Frank and {Andersen}, Mads Fredslund and {Antoci}, Victoria and {Pall{\'e}}, Pere L.},
+        title = "{Precise radial velocities of giant stars. XV. Mysterious nearly periodic radial velocity variations in the eccentric binary {\ensuremath{\varepsilon}} Cygni}",
+      journal = {\aap},
+     keywords = {planetary systems, planets and satellites: detection, planets and satellites: dynamical evolution and stability, binaries: close, stars: horizontal-branch, stars: oscillations, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2021,
+        month = mar,
+       volume = {647},
+          eid = {A160},
+        pages = {A160},
+          doi = {10.1051/0004-6361/202040087},
+archivePrefix = {arXiv},
+       eprint = {2102.01999},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021A&A...647A.160H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Campante2019,
+       author = {{Campante}, Tiago L. and {Corsaro}, Enrico and {Lund}, Mikkel N. and {Mosser}, Beno{\^\i}t and {Serenelli}, Aldo and {Veras}, Dimitri and {Adibekyan}, Vardan and {Antia}, H.~M. and {Ball}, Warrick and {Basu}, Sarbani and {Bedding}, Timothy R. and {Bossini}, Diego and {Davies}, Guy R. and {Delgado Mena}, Elisa and {Garc{\'\i}a}, Rafael A. and {Handberg}, Rasmus and {Hon}, Marc and {Kane}, Stephen R. and {Kawaler}, Steven D. and {Kuszlewicz}, James S. and {Lucas}, Miles and {Mathur}, Savita and {Nardetto}, Nicolas and {Nielsen}, Martin B. and {Pinsonneault}, Marc H. and {Reffert}, Sabine and {Silva Aguirre}, V{\'\i}ctor and {Stassun}, Keivan G. and {Stello}, Dennis and {Stock}, Stephan and {Vrard}, Mathieu and {Y{\i}ld{\i}z}, Mutlu and {Chaplin}, William J. and {Huber}, Daniel and {Bean}, Jacob L. and {{\c{C}}elik Orhan}, Zeynep and {Cunha}, Margarida S. and {Christensen-Dalsgaard}, J{\o}rgen and {Kjeldsen}, Hans and {Metcalfe}, Travis S. and {Miglio}, Andrea and {Monteiro}, M{\'a}rio J.~P.~F.~G. and {Nsamba}, Benard and {{\"O}rtel}, Sibel and {Pereira}, Filipe and {Sousa}, S{\'e}rgio G. and {Tsantaki}, Maria and {Turnbull}, Margaret C.},
+        title = "{TESS Asteroseismology of the Known Red-giant Host Stars HD 212771 and HD 203949}",
+      journal = {\apj},
+     keywords = {Asteroseismology, Exoplanets, Evolved stars, 73, 498, 481, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2019,
+        month = nov,
+       volume = {885},
+       number = {1},
+          eid = {31},
+        pages = {31},
+          doi = {10.3847/1538-4357/ab44a8},
+archivePrefix = {arXiv},
+       eprint = {1909.05961},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ApJ...885...31C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Luque2019,
+       author = {{Luque}, R. and {Trifonov}, T. and {Reffert}, S. and {Quirrenbach}, A. and {Lee}, M.~H. and {Albrecht}, S. and {Fredslund Andersen}, M. and {Antoci}, V. and {Grundahl}, F. and {Schwab}, C. and {Wolthoff}, V.},
+        title = "{Precise radial velocities of giant stars. XIII. A second Jupiter orbiting in 4:3 resonance in the 7 CMa system}",
+      journal = {\aap},
+     keywords = {techniques: radial velocities, planetary systems, planets and satellites: dynamical evolution and stability, planets and satellites: detection, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2019,
+        month = nov,
+       volume = {631},
+          eid = {A136},
+        pages = {A136},
+          doi = {10.1051/0004-6361/201936464},
+archivePrefix = {arXiv},
+       eprint = {1910.05853},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019A&A...631A.136L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Reicher2019,
+       author = {{Reichert}, Katja and {Reffert}, Sabine and {Stock}, Stephan and {Trifonov}, Trifon and {Quirrenbach}, Andreas},
+        title = "{Precise radial velocities of giant stars. XII. Evidence against the proposed planet Aldebaran b}",
+      journal = {\aap},
+     keywords = {stars: individual: {\ensuremath{\alpha}} Tau, planets and satellites: detection, techniques: radial velocities, instrumentation: spectrographs, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2019,
+        month = may,
+       volume = {625},
+          eid = {A22},
+        pages = {A22},
+          doi = {10.1051/0004-6361/201834028},
+archivePrefix = {arXiv},
+       eprint = {1903.09157},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019A&A...625A..22R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
