fix in bib file

--- a/JOSS_Paper/paper_spog.bib
+++ b/JOSS_Paper/paper_spog.bib
@@ -366,7 +366,7 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{Heeren2021
+@ARTICLE{Heeren2021,
        author = {{Heeren}, Paul and {Reffert}, Sabine and {Trifonov}, Trifon and {Wong}, Ka Ho and {Lee}, Man Hoi and {Lillo-Box}, Jorge and {Quirrenbach}, Andreas and {Arentoft}, Torben and {Albrecht}, Simon and {Grundahl}, Frank and {Andersen}, Mads Fredslund and {Antoci}, Victoria and {Pall{\'e}}, Pere L.},
         title = "{Precise radial velocities of giant stars. XV. Mysterious nearly periodic radial velocity variations in the eccentric binary {\ensuremath{\varepsilon}} Cygni}",
       journal = {\aap},
